--- a/compositional_skills/writing/freeform/slang/qna.yaml
+++ b/compositional_skills/writing/freeform/slang/qna.yaml
@@ -1,6 +1,6 @@
 ---
 task_description: >
-  The Sland task enables the use of slang in responses for a
+  The Slang task enables the use of slang in responses for a
   more natural, less stilted verbla exchange
 created_by: jorlandi
 seed_examples:
