Removing single quote from Task Description and fixing indexation

--- a/compositional_skills/writing/freeform/recommendation_letter/qna.yaml
+++ b/compositional_skills/writing/freeform/recommendation_letter/qna.yaml
@@ -38,4 +38,4 @@ seed_examples:
     for a co-worker applying for Web Site Administrator position.
     Can you provide a generic template?
 task_description: |
-   'This task is focused on providing a basic and brief template for a co-worker recommendation letter'
+    This task is focused on providing a basic and brief template for a co-worker recommendation letter
