--- a/compositional_skills/extraction/abstractive/main_takeaway/qna.yaml
+++ b/compositional_skills/extraction/abstractive/main_takeaway/qna.yaml
@@ -59,4 +59,6 @@ seed_examples:
     \ actor.\n"
   question: Generate the main takeaways from the given text.
 task_description: ''
-attribution: 'self_authored'
+attribution: 
+-source: 'self_authored'
+license: 'Apache-2.0'
