--- a/compositional_skills/extraction/abstractive/outline/qna.yaml
+++ b/compositional_skills/extraction/abstractive/outline/qna.yaml
@@ -80,4 +80,6 @@ seed_examples:
     \ is an American director of film, television and theatre.\n"
   question: For the given text, could you generate an outline?
 task_description: ''
-attribution: 'self_authored'
+attribution: 
+-source: 'self_authored'
+ license: 'Apache-2.0'
