--- a/compositional_skills/writing/freeform/brainstorming/refute_claim/qna.yaml
+++ b/compositional_skills/writing/freeform/brainstorming/refute_claim/qna.yaml
@@ -32,4 +32,5 @@ seed_examples:
   question: Identify potential challenges and refutations against the claim that the
     use of genetically modified mosquitoes is not harmful to the environment.
 task_description: ''
-attribution: 'self_authored'
+-source: 'self_authored'
+ license: 'Apache-2.0'
