--- a/compositional_skills/writing/freeform/debate/qna.yaml
+++ b/compositional_skills/writing/freeform/debate/qna.yaml
@@ -25,4 +25,6 @@ seed_examples:
   question: Debate the merits and drawbacks of implementing a universal basic income
     between an economist, a sociologist, and a policy maker.
 task_description: ''
-attribution: 'self_authored'
+attribution:
+-source: 'self_authored'
+ license: 'Apache-2.0'
