--- a/compositional_skills/writing/freeform/legal/contracts/qna.yaml
+++ b/compositional_skills/writing/freeform/legal/contracts/qna.yaml
@@ -33,4 +33,6 @@ seed_examples:
   question: I require help drafting a business contract for a service I will provide.
     Can you outline the terms, payment schedule, and liability clauses?
 task_description: ''
-attribution: 'self_authored'
+attribution:
+-source: 'self_authored'
+ license: 'Apache-2.0'
