--- a/compositional_skills/writing/freeform/poetry/ballad/qna.yaml
+++ b/compositional_skills/writing/freeform/poetry/ballad/qna.yaml
@@ -89,4 +89,6 @@ seed_examples:
   question: Write a ballad about a majestic mountain range and the secrets it holds
     within its peaks.
 task_description: ''
-attribution: 'self_authored'
+attribution:
+-source: 'self_authored'
+ license: 'Apache-2.0'
