--- a/compositional_skills/writing/freeform/poetry/epic_poetry/qna.yaml
+++ b/compositional_skills/writing/freeform/poetry/epic_poetry/qna.yaml
@@ -74,4 +74,6 @@ seed_examples:
     and the heroic quest of a young explorer seeking to make contact with this elusive
     being.
 task_description: ''
-attribution: 'self_authored'
+attribution:
+-source: 'self_authored'
+ license: 'Apache-2.0'
