--- a/compositional_skills/writing/freeform/poetry/freeverse/qna.yaml
+++ b/compositional_skills/writing/freeform/poetry/freeverse/qna.yaml
@@ -54,4 +54,6 @@ seed_examples:
     The promise of springtime breaks anew.'
   question: Write a free verse poem that explores the changing colors of autumn leaves.
 task_description: ''
-attribution: 'self_authored'
+attribution:
+-source: 'self_authored'
+ license: 'Apache-2.0'
