--- a/compositional_skills/writing/freeform/poetry/haiku/qna.yaml
+++ b/compositional_skills/writing/freeform/poetry/haiku/qna.yaml
@@ -7,4 +7,6 @@ seed_examples:
     Nature''s art takes flight.'
   question: Write a haiku that captures the beauty of a single autumn leaf.
 task_description: ''
-attribution: 'self_authored'
+attribution:
+-source: 'self_authored'
+ license: 'Apache-2.0'
