--- a/compositional_skills/writing/freeform/prose/emails/formal/qna.yaml
+++ b/compositional_skills/writing/freeform/prose/emails/formal/qna.yaml
@@ -41,4 +41,6 @@ seed_examples:
   question: Could you help me write a formal email to inquire about the progress of
     my internship application?
 task_description: ''
-attribution: 'self_authored'
+attribution:
+-source: 'self_authored'
+ license: 'Apache-2.0'
