--- a/compositional_skills/writing/freeform/prose/screenplay/qna.yaml
+++ b/compositional_skills/writing/freeform/prose/screenplay/qna.yaml
@@ -120,4 +120,6 @@ seed_examples:
     '
   question: Write a screenplay about a heist gone wrong.
 task_description: ''
-attribution: 'self_authored'
+attribution:
+-source: 'self_authored'
+ license: 'Apache-2.0'
