--- a/compositional_skills/writing/freeform/prose/stories/qna.yaml
+++ b/compositional_skills/writing/freeform/prose/stories/qna.yaml
@@ -34,4 +34,6 @@ seed_examples:
   question: Create a tale about a character who discovers a realm of their own imagination,
     where they must face their inner critic and learn to accept themselves.
 task_description: ''
-attribution: 'self_authored'
+attribution:
+-source: 'self_authored'
+ license: 'Apache-2.0'
