--- a/compositional_skills/writing/freeform/social_media/facebook/qna.yaml
+++ b/compositional_skills/writing/freeform/social_media/facebook/qna.yaml
@@ -11,4 +11,6 @@ seed_examples:
     asking your friends about their favorite ways to stay organized and manage their
     time.
 task_description: ''
-attribution: 'self_authored'
+attribution:
+-source: 'self_authored'
+ license: 'Apache-2.0'
