--- a/compositional_skills/writing/freeform/social_media/linkedin/qna.yaml
+++ b/compositional_skills/writing/freeform/social_media/linkedin/qna.yaml
@@ -10,4 +10,6 @@ seed_examples:
   question: Help me draft a LinkedIn recommendation for a colleague or connection
     that highlights their strengths and achievements.
 task_description: ''
-attribution: 'self_authored'
+attribution:
+-source: 'self_authored'
+ license: 'Apache-2.0'
