--- a/compositional_skills/writing/freeform/social_media/twitter/qna.yaml
+++ b/compositional_skills/writing/freeform/social_media/twitter/qna.yaml
@@ -8,4 +8,6 @@ seed_examples:
   question: Draft a 'Motivation Monday' story on Twitter, brainstorming a powerful
     quote or message that inspires your audience.
 task_description: ''
-attribution: 'self_authored'
+attribution:
+-source: 'self_authored'
+ license: 'Apache-2.0'
