--- a/compositional_skills/writing/freeform/technical/guide/qna.yaml
+++ b/compositional_skills/writing/freeform/technical/guide/qna.yaml
@@ -175,4 +175,6 @@ seed_examples:
   question: Create a technical guide on implementing a containerization strategy using
     Docker and Kubernetes.
 task_description: ''
-attribution: 'self_authored'
+attribution:
+-source: 'self_authored'
+ license: 'Apache-2.0'
