--- a/compositional_skills/writing/freeform/technical/user_manual/qna.yaml
+++ b/compositional_skills/writing/freeform/technical/user_manual/qna.yaml
@@ -174,4 +174,6 @@ seed_examples:
   question: Write a manual on how to perform a security audit for a small to medium-sized
     business.
 task_description: ''
-attribution: 'self_authored'
+attribution:
+-source: 'self_authored'
+ license: 'Apache-2.0'
