--- a/compositional_skills/writing/grounded/editing/spelling/qna.yaml
+++ b/compositional_skills/writing/grounded/editing/spelling/qna.yaml
@@ -66,4 +66,6 @@ seed_examples:
     \ was 877, in 174 families.\n"
   question: Fix any spelling errors in the given text.
 task_description: ''
-attribution: 'self_authored'
+attribution:
+-source: 'self_authored'
+ license: 'Apache-2.0'
