--- a/compositional_skills/writing/grounded/meeting_insights/corporate_email/qna.yaml
+++ b/compositional_skills/writing/grounded/meeting_insights/corporate_email/qna.yaml
@@ -69,4 +69,6 @@ seed_examples:
     discuss next steps.'
   question: Generate a company wide email based on the given meeting transcript
 task_description: ''
-attribution: 'self_authored'
+attribution:
+-source: 'self_authored'
+ license: 'Apache-2.0'
