--- a/compositional_skills/writing/grounded/meeting_insights/executive_summaries/qna.yaml
+++ b/compositional_skills/writing/grounded/meeting_insights/executive_summaries/qna.yaml
@@ -65,4 +65,6 @@ seed_examples:
     and reconvene in a month to evaluate our progress.'
   question: Generate an executive summary of the given meeting transcript.
 task_description: ''
-attribution: 'self_authored'
+attribution:
+-source: 'self_authored'
+ license: 'Apache-2.0'
