--- a/compositional_skills/writing/grounded/summarization/wiki_insights/detailed/qna.yaml
+++ b/compositional_skills/writing/grounded/summarization/wiki_insights/detailed/qna.yaml
@@ -66,4 +66,6 @@ seed_examples:
     \ a heart attack.\"\n"
   question: Generate a detailed summary for the given text.
 task_description: ''
-attribution: 'https://huggingface.co/datasets/hotpot_qa (CC-by-SA 4.0)'
+attribution: 
+-source: 'https://huggingface.co/datasets/hotpot_qa'
+ license: 'CC-by-SA 4.0'
