--- a/compositional_skills/writing/grounded/summarization/wiki_insights/high_level_outline/qna.yaml
+++ b/compositional_skills/writing/grounded/summarization/wiki_insights/high_level_outline/qna.yaml
@@ -52,4 +52,6 @@ seed_examples:
     \n"
   question: Generate a high-level outline for the given text.
 task_description: ''
-attribution: 'https://huggingface.co/datasets/hotpot_qa (CC-by-SA 4.0)'
+attribution: 
+-source: 'https://huggingface.co/datasets/hotpot_qa'
+ license: 'CC-by-SA 4.0'
