--- a/compositional_skills/extraction/inference/quantitative/table_analysis/qna.yaml
+++ b/compositional_skills/extraction/inference/quantitative/table_analysis/qna.yaml
@@ -8,5 +8,6 @@ seed_examples:
 
     '
 task_description: ''
+attribution: 
 -source: 'self_authored'
- license: 'Apache-2.0'
+ license: 'Apache 2.0'
