--- a/compositional_skills/extraction/information/named_entities/dates_and_events/qna.yaml
+++ b/compositional_skills/extraction/information/named_entities/dates_and_events/qna.yaml
@@ -77,5 +77,6 @@ seed_examples:
     \ Gallery of Australia( Canberra) from 1997- 2004.\n"
   question: Extract the dates and events mentioned in the given text.
 task_description: ''
+attribution: 
 -source: 'self_authored'
- license: 'Apache-2.0'
+ license: 'Apache 2.0'
