--- a/compositional_skills/writing/freeform/jokes/puns/qna.yaml
+++ b/compositional_skills/writing/freeform/jokes/puns/qna.yaml
@@ -7,6 +7,10 @@ seed_examples:
 
     '
   question: Tell me a pun about birds.
+  attribution:
+  - source: 'self_authored'
+    license: 'Apache 2.0'
+    
 - answer: 'Why do French people always eat snails?
 
 
@@ -14,6 +18,10 @@ seed_examples:
 
     '
   question: Tell me a pun about fast food.
+  attribution:
+  - source: 'self_authored'
+    license: 'Apache 2.0'
+    
 - answer: 'Why did the car have a belly ache?
 
 
@@ -21,6 +29,10 @@ seed_examples:
 
     '
   question: Tell me a pun about gas.
+  attribution:
+  - source: 'self_authored'
+    license: 'Apache 2.0'
+    
 - answer: 'What did the ocean say to the ocean?
 
 
@@ -28,6 +40,10 @@ seed_examples:
 
     '
   question: Tell me a pun about waves.
+  attribution:
+  - source: 'self_authored'
+    license: 'Apache 2.0'
+    
 - answer: 'Do you want to hear a roof joke?
 
 
@@ -35,6 +51,10 @@ seed_examples:
 
     '
   question: Tell me a pun about roofs.
+  attribution:
+  - source: 'self_authored'
+    license: 'Apache 2.0'
+    
 - answer: 'What do dentists call their x-rays?
 
 
@@ -42,6 +62,10 @@ seed_examples:
 
     '
   question: Tell me a pun about x-rays.
+  attribution:
+  - source: 'self_authored'
+    license: 'Apache 2.0'
+    
 - answer: 'Why does Peter Pan always fly?
 
 
@@ -49,7 +73,9 @@ seed_examples:
 
     '
   question: Tell me a pun about Neverland.
-task_description: ''
-attribution:
+  attribution:
   - source: 'self_authored'
     license: 'Apache 2.0'
+    
+task_description: ''
+
