--- a/compositional_skills/writing/freeform/poetry/limerick/qna.yaml
+++ b/compositional_skills/writing/freeform/poetry/limerick/qna.yaml
@@ -1,3 +1,4 @@
+---
 created_by: shivsr
 seed_examples:
   - answer: 'A flower so bright in the glade,
@@ -9,6 +10,9 @@ seed_examples:
       It lures them to land,
 
       In a dance of life, unafraid.'
+    attribution:
+      - source: self-authored
+        license: Apache-2.0
     question: Write a limerick that playfully describes a flower's bloom and its effect
       on nearby insects.
 
@@ -18,6 +22,9 @@ seed_examples:
       But in the fall
       It's no fun at all
       You must wear a jacket called pea
+    attribution:
+      - source: self-authored
+        license: Apache-2.0
     question: Write a limerick about Nantucket.
 
   - answer: |
@@ -25,6 +32,9 @@ seed_examples:
       With sandy shores and a salty band,
       But alas, it's not just for fun,
       It's also for whaling, oh what a run!
+    attribution:
+      - source: merlinite-7b-Q4_K_M
+        license: Apache-2.0
     question: Write a poem about Nantucket that is not a limerick.
 
   - answer: |
@@ -33,6 +43,9 @@ seed_examples:
       One day she got lost
       And much to her cost
       Was stuck at the checkout stand
+    attribution:
+      - source: self-authored
+        license: Apache-2.0
     question: Write a limerick involving books.
 
   - answer: |
@@ -40,6 +53,9 @@ seed_examples:
       With books that fill it inside,
       But alas, it's not just for fun,
       It's also for knowledge, oh what a run!
+    attribution:
+      - source: merlinite-7b-Q4_K_M
+        license: Apache-2.0
     question: Write a poem involving books that is not a limerick.
 
   - answer: |
@@ -48,6 +64,9 @@ seed_examples:
       The tide will go out
       The lifeguard will shout
       That shark is eating my hand!
+    attribution:
+      - source: self-authored
+        license: Apache-2.0
     question: Write a limerick about the beach.
 
   - answer: |
@@ -55,6 +74,9 @@ seed_examples:
       With waves that crash on the sand,
       But alas, it's not just for play,
       It's also for tides that come and stay!
+    attribution:
+      - source: merlinite-7b-Q4_K_M
+        license: Apache-2.0
     question: Write a poem about the beach that is not a limerick.
 
   - answer: |
@@ -63,6 +85,9 @@ seed_examples:
       The third line is short
       The fourth one is sort-
       ed nonalphabetically
+    attribution:
+      - source: self-authored
+        license: Apache-2.0
     question: Write a limerick about limericks.
 
   - answer: |
@@ -70,6 +95,9 @@ seed_examples:
       Was written with care in the day's light,
       But alas, it was lost in the night,
       Now it's just a memory, oh what a sight!
+    attribution:
+      - source: merlinite-7b-Q4_K_M
+        license: Apache-2.0
     question: Write a poem about limericks that is not a limerick.
 
   - answer: |
@@ -78,6 +106,9 @@ seed_examples:
       In case you don't see
       I'm speaking of tea
       You can add whiskey if your're a sot
+    attribution:
+      - source: self-authored
+        license: Apache-2.0
     question: Write a limerick about tea.
 
   - answer: |
@@ -85,5 +116,8 @@ seed_examples:
       Was poured with care, oh what a story to be told!
       But alas, it was spilled on the floor,
       Now it's just a puddle, oh what a chore!
+    attribution:
+      - source: merlinite-7b-Q4_K_M
+        license: Apache-2.0
     question: Write a poem about tea that is not a limerick.
 task_description: 'Write a limerick'
